2005-08-21  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_option_menu_set): If the value for
	the "picture_options" key is set to "none", don't set the optin menu
	for the scaling options to tiled

	Fixes #313883

2005-08-17  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Replace the changing
	of some GtkDialog defaults through style properties with calls to
	gtk_widget_ensure_style and gtk_container_set_border_width

	Fixes #313680

2005-08-15  Veerapuram Varadhan <vvaradhan@novell.com>

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_color[12]_changed, gnome_wp_options_changed):
	(gnome_wp_shading_changed, wallpaper_properties_init):
	Enable/disable the style-menu, shading-menu and color-picker
	buttons w.r.t gconf-keys.
	(gnome_wp_set_sensitivities): Utility function to take care of
	enabling/disabling widgets w.r.t gconf-keys.
	(gnome_wp_props_wp_set): Don't set the sensitivity of the remove and
	style buttons here. Just call the new method to do it instead

2005-07-25  Sebastien Bacher <seb128@debian.org>

	* gnome-wp-capplet.c (gnome_wp_{scale,shade}_type_changed):
	Update for the changed signal of the option menus
	(wallpaper_properties_init): Connect to the changed signal of
	the scale and color style option menus

	Fixes #157396

2005-07-25  Sebastien Bacher <seb128@debian.org>

	* gnome-background-properties.glade: Replace GnomeColorPicker with
	the GtkColorButton widget
	Some properties were added by newer version of glade

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_[s]color_changed, gnome_wp_color[12]_changed):
	(gnome_wp_load_stuffs, wallpaper_properties_init):
	Update to use the API for GtkColorButton instead of GnomeColorPicker

	Fixes #171676

2005-07-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): If xmlParseFile returns
	NULL, then just return, rather than trying to parse the document

	Fixes #310041
