@@ -1,3 +1,10 @@
+2005-09-06  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-capplet.c (wallpaper_properties_init): Set the style
+	property "action-area-border" for the GtkDialogs here
+
+	"Fixes" #313680
+
 2005-08-21  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-capplet.c (gnome_wp_option_menu_set): If the value for
